# GestionEDT

./: .gitignore  CMakeLists.txt  GestionEDTConfig.cmake.in  README.md  config_GestionEDT.h.in
exe/: main.cpp
include/: Comment.h  Seance.h
src/: Comment.cpp  Seance.cpp
tools/: CMakeLists.txt
tools/quazip/: CMakeLists.txt
